--- a/laravel_core/composer.json
+++ b/laravel_core/composer.json
@@ -14,13 +14,14 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
-        "spatie/laravel-ignition": "^2.0",
+        "spatie/laravel-ignition": "^2.1.3",
         "spatie/laravel-medialibrary": "^10.0.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "intervention/image": "^2.5"
     },
     "autoload": {
         "psr-4": {
