--- a/laravel_core/composer.json
+++ b/laravel_core/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
@@ -15,13 +15,13 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
         "spatie/laravel-ignition": "^2.1.3",
-        "spatie/laravel-medialibrary": "^10.0.0",
+        "spatie/laravel-medialibrary": "^10.1.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.0",
-        "intervention/image": "^2.5"
+        "intervention/image": "^2.7"
     },
     "autoload": {
         "psr-4": {
